[build-system]
requires = [ "poetry_core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "custom_resources"
version = "0.1.0"
description = ""
authors = [ "Amazon Web Services - Prototyping and Cloud Engineering" ]

[tool.poetry.dependencies]
boto3 = "^1.33.6"
python = "^3.11"
tenacity = "^8.2.3"
pg8000 = "^1.22.3"
botocore = "^1.34.67"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
pytest = "^7.4.3"
