[project]
name = "aws-bedrock-batch-stepfn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeff Strunk", email = "strunkjd@amazon.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools[parser]>=3.4.1",
    "boto3>=1.36.2",
    "pydantic>=2.10.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3-stubs-lite[bedrock,s3,stepfunctions]>=1.36.2",
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_bedrock_batch_sfn"]
