[build-system]
requires = [ "poetry_core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "custom_resources"
version = "0.1.0"
description = ""
authors = [ "Amazon Web Services - Prototyping and Cloud Engineering" ]

[tool.poetry.dependencies]
boto3 = "^1.40.49"
opensearch-py = "^3.0.0"
python = "^3.11"
tenacity = "^9.1.2"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
pytest = "^8.4.2"

