[build-system]
requires = [ "poetry_core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "s3vectors_auto_delete"
version = "0.1.0"
description = "Custom resource provider for auto-deleting S3 Vector bucket indexes"
authors = [ "Amazon Web Services - Prototyping and Cloud Engineering" ]
packages = [{include = "custom_resources"}]

[tool.poetry.dependencies]
boto3 = "^1.33.6"
python = "^3.11"
botocore = "^1.34.67"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.4.3"

